references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/CalculationUsage_Invalid2.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:4a8fa53b4c272316997d45d88beb6b17147b1e3cb8f3c784c9a9ac33953c15d9
size 1679
